# tilt-compiler

./: .gitignore  Cargo.toml  LICENSE  MEMORY_IMPLEMENTATION_COMPLETE.md  README.md  debug_test.tilt  run_symbolic_tests.bat  run_symbolic_tests.sh  simple_test.tilt  test_abi_consistency.rs  test_memory.tilt  test_param.rs  vm_jit_compatibility_tests.rs
crates/tilt-ast/: Cargo.toml
crates/tilt-ast/src/: lib.rs
crates/tilt-codegen-cranelift/: Cargo.toml
crates/tilt-codegen-cranelift/src/: lib.rs  memory_jit_tests.rs  tests.rs  tests_new.rs  tests_old.rs
crates/tilt-host-abi/: Cargo.toml
crates/tilt-host-abi/src/: lib.rs
crates/tilt-integration-tests/: Cargo.toml
crates/tilt-integration-tests/src/: lib.rs  memory_test.rs  vm_jit_compatibility.rs
crates/tilt-ir/: Cargo.toml
crates/tilt-ir-builder/: Cargo.toml
crates/tilt-ir-builder/src/: lib.rs
crates/tilt-ir-builder/tests/: integration_test.rs
crates/tilt-ir/src/: lib.rs  lowering.rs  tests.rs
crates/tilt-parser/: Cargo.toml
crates/tilt-parser/src/: lexer.rs  lib.rs  tests.rs  (+1 more)
crates/tilt-vm/: Cargo.toml
crates/tiltc/: Cargo.toml
crates/tiltc/src/: main.rs
examples/: README.md  advanced_memory_test.tilt  example_memory.tilt  final_memory_test.tilt  minimal_alloc_test.tilt  simple_test.tilt  test_function_call.tilt
symbolic_tests/: advanced_structs_fragile.tilt  advanced_structs_fragile.txt  basic_arithmetic.tilt  basic_arithmetic.txt  basic_memory.tilt  basic_memory.txt  comparisons.tilt  comparisons.txt  comprehensive_test.tilt  comprehensive_test.txt  debug_memory.tilt  edge_cases.tilt  edge_cases.txt  function_calls.tilt  function_calls.txt  matrix_operations_fragile.tilt  matrix_operations_fragile.txt  memory_overwrite.tilt  memory_overwrite.txt  minimal_point_test.tilt  multiple_function_calls.tilt  multiple_function_calls.txt  nested_conditionals.tilt  nested_conditionals.txt  pointer_arithmetic.tilt  pointer_arithmetic.txt  recursion.tilt  recursion.txt  simple_conditional.tilt  simple_conditional.txt  simple_void_test.tilt  test_conversion.tilt  test_fixed_conversion.tilt  test_point_array.tilt  test_ssa_loop.tilt  tree_operations_fragile.tilt  tree_operations_fragile.txt  type_keywords_as_identifiers.tilt  type_keywords_as_identifiers.txt
tests/: compatibility_tests.rs
(+1 files in other folders)
