[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.dependencies]
nom = "8.0.0"
logos = "0.15.0"
lalrpop = "0.22.2"
lalrpop-util = "0.22.2"
cranelift = "0.121.1"
cranelift-jit = "0.121.1"
cranelift-module = "0.121.1"
cranelift-frontend = "0.121.1"
target-lexicon = { version = "0.13.2", default-features = false }
