[package]
name = "tilt-codegen-cranelift"
version = "0.1.0"
edition = "2021"

[dependencies]
# The core Cranelift code generation library
cranelift = { workspace = true }
# The JIT engine
cranelift-jit = { workspace = true }
# The module that holds function definitions and links them
cranelift-module = { workspace = true }
# Helper for converting our AST/IR into Cranelift's frontend IR
cranelift-frontend = { workspace = true }
# Needed to define the target machine (e.g., x86-64)
target-lexicon = { workspace = true, default-features = false }

# We need our own IR definitions
tilt-ir = { path = "../tilt-ir" }
tilt-ast = { path = "../tilt-ast" }

[dev-dependencies]
# For testing, we need the parser and lexer
tilt-parser = { path = "../tilt-parser" }
logos = { workspace = true }
